# walk-these-ways

./: .gitattributes  .gitignore  README.md  jit2onnx.py  onnx2engine.py  requirements.txt  rl_datatset_x_vel-0.50_y_vel0.00_yaw_vel0.00.h5  rl_datatset_x_vel-1.00_y_vel0.00_yaw_vel0.00.h5  rl_datatset_x_vel0.00_y_vel-0.50_yaw_vel0.00.h5  rl_datatset_x_vel0.00_y_vel-1.00_yaw_vel0.00.h5  rl_datatset_x_vel0.00_y_vel0.00_yaw_vel-0.50.h5  rl_datatset_x_vel0.00_y_vel0.00_yaw_vel-1.00.h5  rl_datatset_x_vel0.00_y_vel0.00_yaw_vel0.00.h5  rl_datatset_x_vel0.00_y_vel0.00_yaw_vel0.50.h5  rl_datatset_x_vel0.00_y_vel0.00_yaw_vel1.00.h5  rl_datatset_x_vel0.00_y_vel0.50_yaw_vel0.00.h5  rl_datatset_x_vel0.00_y_vel1.00_yaw_vel0.00.h5  rl_datatset_x_vel0.50_y_vel0.00_yaw_vel0.00.h5  rl_datatset_x_vel1.00_y_vel0.00_yaw_vel0.00.h5  setup.py  tensorrt_recipe.txt
a1_gym/: __init__.py
a1_gym/utils/: terrain.py
a1_gym_deploy/: setup.py
a1_gym_deploy/autostart/: start_controller.sh  start_unitree_sdk.sh
a1_gym_deploy/docker/: Makefile
a1_gym_deploy/envs/: history_wrapper.py  lcm_agent.py
a1_gym_deploy/installer/: install_deployment_code.sh
a1_gym_deploy/scripts/: deploy_policy.py  send_to_unitree.sh
a1_gym_deploy/utils/: cheetah_state_estimator.py  deployment_runner.py
a1_gym_learn/eval_metrics/: domain_randomization.py
a1_gym_learn/ppo/: __init__.py  ppo.py  (+1 more)
a1_hardware/: deploy_policy.py
scripts/: play.py  test.py  train.py
unitree_legged_sdk/: CMakeLists.txt
unitree_legged_sdk/examples/: lcm_position.cpp
unitree_legged_sdk/include/unitree_legged_sdk/: lcm_server.h
(+23 files in other folders)
